--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>מחשבון טריידים - עולם הכיף 🎉</title>
     <link rel="stylesheet" href="styles.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3699115923015902"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <h1>מחשבון טריידים - עולם הכיף 🎉</h1>
